--- a/Bank-fe/bank-be/src/app/payment/payments/payments.component.html
+++ b/Bank-fe/bank-be/src/app/payment/payments/payments.component.html
@@ -1,27 +1,52 @@
-<div class="pay">
+<form class="pay" [formGroup]="form" (ngSubmit)="onPayClick()">
   <div class="logos">
-    <img src="/assets/visa.svg" alt="Visa">
-    <img src="/assets/mastercard.svg" alt="Mastercard">
-    <img src="/assets/amex.svg" alt="AmEx">
+    <img src="/assets/visa.svg" alt="Visa" />
+    <img src="/assets/mastercard.svg" alt="Mastercard" />
+    <img src="/assets/amex.svg" alt="AmEx" />
   </div>
 
+  <label>Payment amount: {{ amount }}</label>
+
   <label>Card number (PAN)
-    <input placeholder="1234 5678 9012 3456" autocomplete="cc-number" inputmode="numeric">
+    <input
+      formControlName="pan"
+      placeholder="1234 5678 9012 3456"
+      autocomplete="cc-number"
+      inputmode="numeric"
+    />
   </label>
 
   <div class="row">
     <label>Expiry (MM/YY)
-      <input placeholder="MM/YY" autocomplete="cc-exp" inputmode="numeric">
+      <input
+        formControlName="expiry"
+        placeholder="MM/YY"
+        autocomplete="cc-exp"
+        inputmode="numeric"
+      />
     </label>
 
     <label>Security code
-      <input placeholder="CVC" autocomplete="cc-csc" inputmode="numeric">
+      <input
+        formControlName="securityCode"
+        placeholder="CVC"
+        autocomplete="cc-csc"
+        inputmode="numeric"
+      />
     </label>
   </div>
 
   <label>Cardholder name
-    <input placeholder="JOHN DOE" autocomplete="cc-name">
+    <input
+      formControlName="cardholderName"
+      placeholder="JOHN DOE"
+      autocomplete="cc-name"
+    />
   </label>
 
-  <button>Pay</button>
-</div>
+  <button type="submit" [disabled]="isSubmitting || form.invalid">
+    {{ isSubmitting ? 'Processing...' : 'Pay' }}
+  </button>
+
+  <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
+</form>
