--- a/PSP-fe/PSP-fe/src/app/payment/payments/payments.component.html
+++ b/PSP-fe/PSP-fe/src/app/payment/payments/payments.component.html
@@ -1,2 +1,2 @@
 <button (click)="payWithCard()">Pay with card</button>
-<button>Pay with QR code</button>
+<button (click)="payWithQR()">Pay with QR code</button>
